--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "vite": "^2.9.0"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.33"
   }
 }
